--- a/EXERCICIO 03/git.html
+++ b/EXERCICIO 03/git.html
@@ -13,7 +13,7 @@
 
     <div class="wrap">
             <nav class="nav">
-                <a href="template.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="git.html">Sobre o Git</a>
                 <a href="github.html">Sobre o GitHub</a>
             </nav>      
@@ -29,7 +29,7 @@
 			</main>
 
             <footer class="footer">
-                <a class="footer-home" href="template.html"><i class="fas fa-home"></i></a>
+                <a class="footer-home" href="index.html"><i class="fas fa-home"></i></a>
                 <div class="copyright">
                     &copy; Equipe: Alan | Bruno | Sandro
                 </div>
