--- a/EXERCICIO 03/github.html
+++ b/EXERCICIO 03/github.html
@@ -13,7 +13,7 @@
 
     <div class="wrap">
             <nav class="nav">
-                <a href="template.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="git.html">Sobre o Git</a>
                 <a href="github.html">Sobre o GitHub</a>
             </nav>      
@@ -22,21 +22,16 @@
                 <h1>Aprenda mais sobre Github</h1>
                 <h3>O que é GitHub e para que é usado?</h3>
                 <p>GitHub é um sistema de gerenciamento de projetos e versões de códigos assim como uma plataforma de rede social criado para desenvolvedores. Mas para que o GitHub é utilizado? Entre outras coisas, ele permite que você trabalhe em projetos colaborativos com desenvolvedores de todo o mundo, planeje seus projetos e acompanhe o trabalho. Além de oferecer diversas funcionalidades extras ao aplicativo Git. Resumindo, você poderá usar gratuitamente o github para hospedar seus projetos pessoais. Além disso, quase todos os projetos/frameworks/bibliotecas sobre desenvolvimento open source estão no github, e você pode acompanhá-los através de novas versões, contribuir informando bugs ou até mesmo enviando código e correções.</p>
+               
                 <center><img src="img/githubfundo.jpg" alt="imagem ilustrativa"></center>
-            </main>
-
-            <main class="main">
+            
                 <h3>GitHub não é apenas para desenvolvedores!</h3>
-                <p>O GitHub é uma ótima plataforma que mudou o método de trabalho de desenvolvedores. Mas qualquer pessoa que deseja gerenciar seu projeto com eficiência e trabalhar com outros colaboradores também pode usar o GitHub.</p>
-                <p>Se sua equipe trabalha em um projeto que realiza atualizações constantes e você quer acompanhar como as mudanças são feitas, então o GitHub é uma ótima opção para você. Existem outras alternativas como o GitLab e BitBucket, mas o GitHub deve ser levado em consideração.</p>
-
+                <p>O GitHub é uma ótima plataforma que mudou o método de trabalho de desenvolvedores. Mas qualquer pessoa que deseja gerenciar seu projeto com eficiência e trabalhar com outros colaboradores também pode usar o GitHub. Se sua equipe trabalha em um projeto que realiza atualizações constantes e você quer acompanhar como as mudanças são feitas, então o GitHub é uma ótima opção para você. Existem outras alternativas como o GitLab e BitBucket, mas o GitHub deve ser levado em consideração.</p>
 
             </main>
-
-
 
             <footer class="footer">
-                <a class="footer-home" href="template.html"><i class="fas fa-home"></i></a>
+                <a class="footer-home" href="index.html"><i class="fas fa-home"></i></a>
                 <div class="copyright">
                     &copy; Equipe: Alan | Bruno | Sandro
                 </div>
